// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Card /> renderes the <Card /> and toogles the card feature 1`] = `
<div
  class="card__Group-s87lnr-2 DoSzx"
>
  <div
    class="card__Container-s87lnr-1 btenIj"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 fhZlNb"
    >
      <div
        class="card__Item-s87lnr-13 kEAPdG"
        data-testid="tiger-king-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 iCbjTL"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 fIviUL"
        >
          <p
            class="card__Subtitle-s87lnr-3 hrOpmu"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 btenIj"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 fhZlNb"
    >
      <div
        class="card__Item-s87lnr-13 kEAPdG"
        data-testid="juno-item-feature"
      >
        <img
          class="card__Image-s87lnr-14 iCbjTL"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 fIviUL"
        >
          <p
            class="card__Subtitle-s87lnr-3 hrOpmu"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Card /> renderes the <Card /> with populated data 1`] = `
<div
  class="card__Group-s87lnr-2 DoSzx"
>
  <div
    class="card__Container-s87lnr-1 btenIj"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Documentaries
    </p>
    <div
      class="card__Entities-s87lnr-12 fhZlNb"
    >
      <div
        class="card__Item-s87lnr-13 kEAPdG"
      >
        <img
          class="card__Image-s87lnr-14 iCbjTL"
          src="/images/series/documentaries/tiger-king/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 fIviUL"
        >
          <p
            class="card__Subtitle-s87lnr-3 hrOpmu"
          >
            Tiger King
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Tiger King description
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="card__Container-s87lnr-1 btenIj"
  >
    <p
      class="card__Title-s87lnr-0 RgLYa"
    >
      Feel Good
    </p>
    <div
      class="card__Entities-s87lnr-12 fhZlNb"
    >
      <div
        class="card__Item-s87lnr-13 kEAPdG"
      >
        <img
          class="card__Image-s87lnr-14 iCbjTL"
          src="/images/series/feel-good/juno/small.jpg"
        />
        <div
          class="card__Meta-s87lnr-11 fIviUL"
        >
          <p
            class="card__Subtitle-s87lnr-3 hrOpmu"
          >
            Juno
          </p>
          <p
            class="card__Text-s87lnr-4 lbljBf"
          >
            Juno description
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
